mysql-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
 name: mysql-networkpolicy
spec: 
 podSelector: 
  matchLabels: 
   app: wordpress
   tier: mysql 
 policyTypes:
 - Ingress
 ingress: 
 - from: 
   - podSelector:
      matchLabels: 
        app: mysql
   ports:
   - port: 3306
